feat!: Compare/merge Workitems
Fixes #31
